<resources>
    <!-- General -->
    <string name="saveText">Save</string>
    <string name="cancelText">Cancel</string>

    <!-- Landing Page -->
    <string name="app_name">Glicko-2 Calculator</string>
    <string name="viewInfo">About App</string>
    <string name="viewPlayers">View Players</string>
    <string name="viewGames">View Games</string>
    <string name="viewSystem">Calculator Settings</string>

    <!-- About Screen -->
    <string name="title_activity_about">Glicko-2 Calculator: About</string>
    <string name="creatorText">This app was created by Eric, Andreja, and Dave for a Mobile
        Application Development course.</string>
    <string name="glickmanText">The Glicko-2 rating system used by this app was created by Prof.
        Mark Glickman. The paper can be found at http://glicko.net/glicko/glicko2.pdf</string>
    <string name="legalText">The calculations are done using a glicko-2 implementation written by
        Jeremy Gooch and released under a BSD 2-Clause license, which allows for commercial and
        private use with or without modification. The source files and a copy of the original
        license can be found at https://github.com/goochjs/glicko2</string>

    <!-- Players Screen -->
    <string name="title_activity_players">All Players</string>

    <!-- Add Player -->
    <string name="title_activity_add_player">Add Player</string>
    <string name="nameHint">Player Name</string>
    <string name="ratingText">Rating</string>
    <string name="deviationText">Rating Deviation</string>
    <string name="volatilityText">Volatility</string>

    <!-- Player Info -->
    <string name="title_activity_player_info">Player Info</string>
    <string name="deletePlayerText">Delete Player</string>
    <string name="applyText">Apply Changes</string>
    <string name="createGameText">Create Game</string>
    <string name="totalGamesText">Total Games</string>
    <string name="wonGamesText">Games Won</string>
    <string name="winRateText">Win Rate</string>

    <!-- Games Screen -->
    <string name="title_activity_games">All Games</string>
    <string name="player1Label">Winner</string>
    <string name="player2Label">Loser</string>
    <string name="isDrawText">Is Draw</string>

    <!-- Add Game -->
    <string name="title_activity_add_game">Add Game</string>
    <string name="p1WinButton">Player 1 Win</string>
    <string name="p2WinButton">Player 2 Win</string>
    <string name="tieButton">Tie</string>
    <string name="switchDesc">Switch Players</string>

    <!-- Settings Screen -->
    <string name="title_activity_settings">Calculator Settings</string>
    <string name="tauText">System Tau</string>
    <string name="defRatingText">Default Rating</string>
    <string name="defDeviationText">Default Rating Deviation</string>
    <string name="defVolatilityText">Default Volatility</string>
    <string name="resetDefaultsText">Reset to Default Values</string>
</resources>
