<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group10.glicko2calculator.AddGameActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <AutoCompleteTextView
            android:id="@+id/player1Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/player1Label"
            android:inputType="textPersonName" />

        <AutoCompleteTextView
            android:id="@+id/player2Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/player1Entry"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/player2Label"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/drawCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/player1Entry"
            android:layout_below="@id/player2Entry"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/isDrawText" />

        <Button
            android:id="@+id/addGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/player1Entry"
            android:layout_below="@id/drawCheck"
            android:layout_marginTop="32dp"
            android:text="@string/saveText" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/player1Entry"
            android:layout_alignTop="@id/addGameButton"
            android:text="@string/cancelText" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/swap"
        android:contentDescription="@string/switchDesc"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintStart_toEndOf="@id/container" />

</android.support.constraint.ConstraintLayout>
