<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PlayerInfoActivity"
    tools:showIn="@layout/activity_player_info">

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="<placeholder>"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ratingInfoTable"
        app:layout_constraintVertical_bias="0.75" />

    <TableLayout
        android:id="@+id/ratingInfoTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/gameCountTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ratingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratingText"
                android:labelFor="@id/ratingEntry" />

            <EditText
                android:id="@+id/ratingEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/deviationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deviationText"
                android:labelFor="@id/deviationEntry" />

            <EditText
                android:id="@+id/deviationEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/volatilityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volatilityText"
                android:labelFor="@id/volatilityEntry" />

            <EditText
                android:id="@+id/volatilityEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/gameCountTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ratingInfoTable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp">

            <TextView
                android:id="@+id/wonGamesDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/totalGamesDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/winRateDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp">

            <TextView
                android:id="@+id/wonGamesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wonGamesText"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/totalGameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalGamesText"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/winRateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winRateText"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/applyText"
        app:layout_constraintTop_toBottomOf="@id/gameCountTable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/makeGameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/makeGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/createGameText"
        app:layout_constraintTop_toBottomOf="@id/gameCountTable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintVertical_bias="0.333" />

</android.support.constraint.ConstraintLayout>